--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-This is my first page.
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Hello Coursera!</title>
+    </head>
+    <body>
+        <h1>Hello Coursera!</h1>
+    </body>
+</html>
